[package]
name = "morph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
chumsky = "1.0.0-alpha.4"
# chumsky = "0.9.2"
logos = "0.13.0"
paste = "1.0.12"
proc-macro2 = "1.0.63"
rust_decimal = "1.30.0"
rust_decimal_macros = "1.30.0"
